feat: Update dependencies and implement authentication features
- Added @emotion/react, @emotion/styled, and @mui/material for UI components.
- Removed favicon.ico and cleaned up globals.css.
- Updated layout and page components to reflect new design and functionality.
- Created admin, base, login, and logout pages with JWT authentication.
- Implemented middleware for route protection based on user roles.
- Added decodeJwt utility for decoding JWT tokens.
- Created API route for user authentication and fetching user claims.